# kitty-pane-bg

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  demo.sh  install.sh  kitty.conf.example  setup-kitty.sh  setup.sh  test-install.sh  tmux.conf.example
.github/workflows/: release.yml
src/: color_cache.rs  image_gen.rs  kitty.rs  main.rs  tmux.rs
