[package]
name = "kitty-pane-bg"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance CLI tool for generating pastel-colored background images from tmux pane layouts"
license = "MIT"
repository = "https://github.com/yourusername/kitty-pane-bg"
keywords = ["tmux", "kitty", "terminal", "background", "image"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
regex = "1.0"
image = "0.24"
imageproc = "0.23"
rand = "0.8"
dirs = "5.0"
base64 = "0.21"
lazy_static = "1.4"
rayon = "1.8"
